admission/ValidatingAdmissionPolicy/policies/automount-token-false/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: serviceaccount-automount-token-false
  annotations:
    security.kubeapt.io/displayName: 'Automount Token False'
    security.kubeapt.io/description: automountServiceAccountToken must be set to false by default on ServiceAccounts.
    security.kubeapt.io/resource: ServiceAccounts
    security.kubeapt.io/severity: "3"
    security.kubeapt.io/remediation: "Set automountServiceAccountToken=false on ServiceAccounts. Fields: automountServiceAccountToken."
    policies.kolteq.com/validatingAdmissionPolicy: 288fb92b-4b29-5439-85e7-2f73cf881a9e
  labels:
    check-serviceaccount-automount-token-false.security.kolteq.com/audit: 'false-true'
    check-serviceaccount-automount-token-false.security.kolteq.com/enforce: 'false-true'
    check-serviceaccount-automount-token-false.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - serviceaccounts
  validations:
  - expression: |
      has(object.automountServiceAccountToken) && object.automountServiceAccountToken == false
    message: |
      automountServiceAccountToken must be set to false by default on ServiceAccounts.
